--- a/BeautyDB.UI/MainWindow.xaml
+++ b/BeautyDB.UI/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Button Content="Создание" Width="120" Height="40"
+                HorizontalAlignment="Center" VerticalAlignment="Center"
+                Click="CreateButton_Click"/>
     </Grid>
 </Window>
