--- a/BeautyDB.UI/ReservationEditWindow.xaml
+++ b/BeautyDB.UI/ReservationEditWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BeautyDB.UI.ReservationEditWindow"
+<Window x:Class="BeautyDB.UI.ReservationEditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -25,33 +25,33 @@
 
         <!-- Client Name -->
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Имя клиента:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="0" Grid.Column="1" x:Name="ClientNameTextBox" Margin="0,0,0,10"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Client.Name}" Margin="0,0,0,10"/>
 
         <!-- Client Phone -->
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Телефон клиента:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="ClientPhoneTextBox" Margin="0,0,0,10"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Client.Phone}" Margin="0,0,0,10"/>
 
         <!-- Master -->
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Мастер:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <ComboBox Grid.Row="2" Grid.Column="1" x:Name="MasterComboBox" DisplayMemberPath="Name" Margin="0,0,0,10"/>
+        <ComboBox Grid.Row="2" Grid.Column="1" SelectedItem="{Binding Master}" DisplayMemberPath="Name" Margin="0,0,0,10"/>
 
         <!-- Service Description -->
         <TextBlock Grid.Row="3" Grid.Column="0" Text="Описание услуги:" VerticalAlignment="Top" Margin="0,5,0,10"/>
-        <TextBox Grid.Row="3" Grid.Column="1" x:Name="ServiceDescriptionTextBox"
+        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ServiceDescription}"
                  AcceptsReturn="True" TextWrapping="Wrap"
                  Height="80" VerticalScrollBarVisibility="Auto" Margin="0,0,0,10"/>
 
         <!-- Start Time -->
         <TextBlock Grid.Row="4" Grid.Column="0" Text="Время начала:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <DatePicker Grid.Row="4" Grid.Column="1" x:Name="StartTimeDatePicker" Margin="0,0,0,10"/>
+        <DatePicker Grid.Row="4" Grid.Column="1" SelectedDate="{Binding StartTime}" Margin="0,0,0,10"/>
 
         <!-- Duration -->
         <TextBlock Grid.Row="5" Grid.Column="0" Text="Длительность (мин):" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="5" Grid.Column="1" x:Name="DurationTextBox" Margin="0,0,0,10"/>
+        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Duration}" Margin="0,0,0,10"/>
 
         <!-- Status -->
         <TextBlock Grid.Row="6" Grid.Column="0" Text="Статус:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <ComboBox Grid.Row="6" Grid.Column="1" x:Name="StatusComboBox" Margin="0,0,0,10"/>
+        <ComboBox Grid.Row="6" Grid.Column="1" SelectedItem="{Binding Status}" Margin="0,0,0,10"/>
 
         <!-- Buttons -->
         <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
