--- a/BeautyDB.UI/ReservationEditWindow.xaml
+++ b/BeautyDB.UI/ReservationEditWindow.xaml
@@ -4,8 +4,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:BeautyDB.UI"
+        xmlns:converters="clr-namespace:BeautyDB.UI.Converters"
         mc:Ignorable="d"
         Title="ReservationEditWindow" Height="450" Width="800">
+    <Window.Resources>
+        <converters:ReservationStatusConverter x:Key="StatusConverter"/>
+    </Window.Resources>
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -58,7 +62,13 @@
         <ComboBox Grid.Row="6" Grid.Column="1"
                   ItemsSource="{x:Static local:ReservationEditWindow.AvailableStatuses}"
                   SelectedItem="{Binding Status}"
-                  Margin="0,0,0,10"/>
+                  Margin="0,0,0,10">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Converter={StaticResource StatusConverter}}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
 
         <!-- Buttons -->
         <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
