--- a/BeautyDB.UI/ReservationEditWindow.xaml
+++ b/BeautyDB.UI/ReservationEditWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:BeautyDB.UI"
         xmlns:converters="clr-namespace:BeautyDB.UI.Converters"
+        xmlns:domain="clr-namespace:BeautyDB.Domain;assembly=BeautyDB.Domain"
         mc:Ignorable="d"
         Title="ReservationEditWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <domain:Reservation/>
+    </Window.DataContext>
     <Window.Resources>
         <converters:ReservationStatusConverter x:Key="StatusConverter"/>
     </Window.Resources>
