--- a/BeautyDB.UI/ReservationEditWindow.xaml
+++ b/BeautyDB.UI/ReservationEditWindow.xaml
@@ -13,6 +13,7 @@
     </Window.DataContext>
     <Window.Resources>
         <converters:ReservationStatusConverter x:Key="StatusConverter"/>
+        <converters:DateOnlyConverter x:Key="DateOnlyConverter"/>
     </Window.Resources>
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -56,7 +57,7 @@
 
         <!-- Start Date -->
         <TextBlock Grid.Row="4" Grid.Column="0" Text="Дата начала:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <DatePicker Grid.Row="4" Grid.Column="1" SelectedDate="{Binding Date}" Margin="0,0,0,10"/>
+        <DatePicker Grid.Row="4" Grid.Column="1" SelectedDate="{Binding Date, Converter={StaticResource DateOnlyConverter}}" Margin="0,0,0,10"/>
 
         <!-- Start Time -->
         <TextBlock Grid.Row="5" Grid.Column="0" Text="Время начала:" VerticalAlignment="Center" Margin="0,0,0,10"/>
