--- a/BeautyDB.UI/ReservationEditWindow.xaml
+++ b/BeautyDB.UI/ReservationEditWindow.xaml
@@ -14,6 +14,7 @@
     <Window.Resources>
         <converters:ReservationStatusConverter x:Key="StatusConverter"/>
         <converters:DateOnlyConverter x:Key="DateOnlyConverter"/>
+        <converters:TimeOnlyConverter x:Key="TimeOnlyConverter"/>
     </Window.Resources>
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -61,7 +62,7 @@
 
         <!-- Start Time -->
         <TextBlock Grid.Row="5" Grid.Column="0" Text="Время начала:" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding StartTime}" Margin="0,0,0,10"/>
+        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding StartTime, Converter={StaticResource TimeOnlyConverter}}" Margin="0,0,0,10"/>
 
         <!-- Duration -->
         <TextBlock Grid.Row="6" Grid.Column="0" Text="Длительность (мин):" VerticalAlignment="Center" Margin="0,0,0,10"/>
