--- a/BeautyDB.UI/ReservationEditWindow.xaml
+++ b/BeautyDB.UI/ReservationEditWindow.xaml
@@ -15,6 +15,7 @@
         <converters:ReservationStatusConverter x:Key="StatusConverter"/>
         <converters:DateOnlyConverter x:Key="DateOnlyConverter"/>
         <converters:TimeOnlyConverter x:Key="TimeOnlyConverter"/>
+        <converters:TimeSpanConverter x:Key="TimeSpanConverter"/>
     </Window.Resources>
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -65,8 +66,8 @@
         <TextBox Grid.Row="5" Grid.Column="1" x:Name="StartTimeTextBox" Text="{Binding StartTime, Converter={StaticResource TimeOnlyConverter}}" Margin="0,0,0,10"/>
 
         <!-- Duration -->
-        <TextBlock Grid.Row="6" Grid.Column="0" Text="Длительность (мин):" VerticalAlignment="Center" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="6" Grid.Column="1" x:Name="DurationTextBox" Text="{Binding Duration}" Margin="0,0,0,10"/>
+        <TextBlock Grid.Row="6" Grid.Column="0" Text="Длительность:" VerticalAlignment="Center" Margin="0,0,0,10"/>
+        <TextBox Grid.Row="6" Grid.Column="1" x:Name="DurationTextBox" Text="{Binding Duration, Converter={StaticResource TimeSpanConverter}}" Margin="0,0,0,10"/>
 
         <!-- Status -->
         <TextBlock Grid.Row="7" Grid.Column="0" Text="Статус:" VerticalAlignment="Center" Margin="0,0,0,10"/>
